--- a/GPT2/TinyGPT/src/CMakeLists.txt
+++ b/GPT2/TinyGPT/src/CMakeLists.txt
@@ -22,13 +22,9 @@ add_subdirectory(${THIRD_PARTY_DIR}/re2 re2)
 # 获取源文件
 file(GLOB_RECURSE TinyGPT_src "./*.cpp" "./*.h")
 
-# 设置编译选项
-if (MSVC)
-    set_source_files_properties(${TinyGPT_src} PROPERTIES COMPILE_FLAGS "/WX")
-else ()
-    set_source_files_properties(${TinyGPT_src} PROPERTIES COMPILE_FLAGS "-Werror -Wno-deprecated-declarations")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-endif ()
+# 设置编译选项，GCC
+set_source_files_properties(${TinyGPT_src} PROPERTIES COMPILE_FLAGS "-Werror -Wno-deprecated-declarations")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 # 创建目标库
 add_library(${PROJECT_NAME}
@@ -39,28 +35,23 @@ add_library(${PROJECT_NAME}
 # 包含头文件目录
 target_include_directories(${PROJECT_NAME} PRIVATE
         ${THIRD_PARTY_DIR}/json11
-        ${THIRD_PARTY_DIR}/re2
 )
 
-# MSVC 特定配置
-if (MSVC)
-    set(MKL_ARCH intel64)
-    set(MKL_LINK static)
-    set(MKL_THREADING intel_thread)
-    find_package(MKL CONFIG REQUIRED)
-    target_link_libraries(${PROJECT_NAME}
-            re2::re2
-            MKL::MKL
-    )
-endif ()
+# 链接库
+# . /opt/intel/oneapi/mkl/latest/env/vars.sh
+set(MKL_ARCH intel64)
+set(MKL_LINK static)
+set(MKL_THREADING intel_thread)
+find_package(MKL CONFIG REQUIRED)
+target_link_libraries(${PROJECT_NAME}
+        re2::re2
+        MKL::MKL
+)
 
 # blas
-find_library(BLAS_LIB NAMES openblas)
-if (BLAS_LIB)
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${BLAS_LIB})
-else()
-    message(FATAL_ERROR "BLAS library not found")
-endif()
-
-# 链接 RE2 库到目标
-target_link_libraries(${PROJECT_NAME} PRIVATE re2::re2)
+# find_library(BLAS_LIB NAMES openblas)
+# if (BLAS_LIB)
+#     target_link_libraries(${PROJECT_NAME} PRIVATE ${BLAS_LIB})
+# else()
+#     message(FATAL_ERROR "BLAS library not found")
+# endif()
